--- a/app/src/main/res/layout/lock_activity.xml
+++ b/app/src/main/res/layout/lock_activity.xml
@@ -60,7 +60,7 @@
                 android:text="@string/login" />
 
             <Button
-                android:id="@+id/switch_user_button"
+                android:id="@+id/switch_button"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
