--- a/app/src/main/res/layout/book_add_activity.xml
+++ b/app/src/main/res/layout/book_add_activity.xml
@@ -11,7 +11,8 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="?actionBarSize">
+        android:layout_marginTop="?actionBarSize"
+        android:fillViewport="true">
 
         <LinearLayout
             android:id="@+id/form_container"
@@ -66,6 +67,11 @@
                 android:textColorHint="@color/color_form_item_hint"
                 android:textSize="20sp"
                 tools:ignore="Autofill,LabelFor" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
 
             <Button
                 android:id="@+id/book_add_button"
