--- a/app/src/main/res/layout/book_list_activity.xml
+++ b/app/src/main/res/layout/book_list_activity.xml
@@ -30,7 +30,13 @@
 
     </android.support.design.widget.CoordinatorLayout>
 
-    <include layout="@layout/toolbar" />
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:theme="@style/ToolbarTheme"
+        app:navigationIcon="?attr/homeAsUpIndicator" />
 
     <include layout="@layout/shadow_toolbar" />
 
