--- a/app/src/main/res/layout/book_import_activity.xml
+++ b/app/src/main/res/layout/book_import_activity.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -7,5 +8,15 @@
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_gravity="center" />
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:theme="@style/ToolbarTheme"
+        app:navigationIcon="?attr/homeAsUpIndicator" />
+
+    <include layout="@layout/shadow_toolbar" />
 
 </FrameLayout>
