--- a/app/src/main/res/menu/safe.xml
+++ b/app/src/main/res/menu/safe.xml
@@ -5,5 +5,10 @@
         android:id="@+id/menu_export"
         android:icon="@drawable/export"
         android:title="@string/export"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/menu_lock"
+        android:icon="@drawable/lock_book"
+        android:title="@string/lock_book"
+        app:showAsAction="never" />
 </menu>
