--- a/app/src/main/res/layout/button_item.xml
+++ b/app/src/main/res/layout/button_item.xml
@@ -8,7 +8,7 @@
     android:orientation="horizontal"
     android:padding="12dp">
 
-    <android.support.v7.widget.AppCompatButton
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button"
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="match_parent"
